@@ -101,7 +101,7 @@
 /include/Makefile
 
 /include/kernaux.h
-/include/kernaux/console.h
+/include/kernaux/drivers/console.h
 /include/kernaux/multiboot2.h
 /include/kernaux/printf.h
 /include/kernaux/version.h
