@@ -1,0 +1,12 @@
+#ifndef KERNAUX_INCLUDED_DRIVERS_FRAMEBUFFER
+#define KERNAUX_INCLUDED_DRIVERS_FRAMEBUFFER
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
