@@ -1,0 +1,12 @@
+#ifndef KERNAUX_INCLUDED_DRIVERS_INTEL_8259_PIC
+#define KERNAUX_INCLUDED_DRIVERS_INTEL_8259_PIC
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
