@@ -1,12 +1,0 @@
-#ifndef KERNAUX_INCLUDED_FRAMEBUFFER
-#define KERNAUX_INCLUDED_FRAMEBUFFER
-
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-#ifdef __cplusplus
-}
-#endif
-
-#endif
