@@ -1,0 +1,8 @@
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include <kernaux/drivers/framebuffer.h>
+
+__attribute__((unused))
+static const int foobar = 0;
