@@ -1,3 +1,7 @@
+2022-06-23  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Added package "drivers"
+
 2022-06-22  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/free_list.h: Finished
